syntax = "proto3";

option csharp_namespace = "TicketManagement ";

package Ticket;

service TicketManagement {

  rpc GetTicket_Grpc (TicketRequest) returns (TicketReply);
}


message TicketRequest {
  string Id=1;
}

message TicketReply {
	 string body=1;
}
